Añadido correciones de CORS al backend para resolver peticiones exitosamente y no bloquee Render.